# compiler

./: .travis.yml  Cargo.toml  LICENSE  README.md  TODO
src/: lib.rs  main.rs  target.rs
src/dsl/: mod.rs  parser.rs  token.rs
src/instructions/: add.rs  instruction.rs  mod.rs  ret.rs
src/ir/: Cargo.toml  attrs.rs  basicblock.rs  block.rs  cond.rs  constants.rs  function.rs  global.rs  lib.rs  mod.rs  module.rs  name.rs  print.rs  span.rs  users.rs  value.rs  verifier.rs
src/ir/constant/: decimal.rs  integer.rs  strukt.rs
src/ir/constants/: decimal.rs  float.rs  integer.rs  mod.rs  strukt.rs
src/ir/instruction/: 1  add.rs  br.rs  call.rs  copy.rs  div.rs  jump.rs  mod.rs  mul.rs  ret.rs  shl.rs  shr.rs  sub.rs
src/ir/instructions/: add.rs  call.rs  div.rs  instruction.rs  jmp.rs  mod.rs  mul.rs  ret.rs  shl.rs  shr.rs  sub.rs
src/ir/item/: function.rs  global.rs  mod.rs
src/ir/read/: characters.rs  mod.rs  parse.rs  resolve.rs  token.rs  tokenizer.rs
src/ir/types/: array.rs  block.rs  decimal.rs  float.rs  function.rs  integer.rs  label.rs  mod.rs  pointer.rs  signature.rs  strukt.rs  ty.rs  vector.rs  void.rs
src/ir/value/: argument_ref.rs  block_ref.rs  blockref.rs  expression.rs  function_ref.rs  functionref.rs  global.rs  global_ref.rs  globalref.rs  mod.rs  pointer.rs  register.rs  register_ref.rs  registerref.rs  string.rs  value.rs
src/isel/: Cargo.toml  dag.rs  lib.rs  mod.rs  node.rs  opcodes.rs  ty.rs
src/lang/: Cargo.toml  attrs.rs  basicblock.rs  block.rs  function.rs  global.rs  instruction.rs  lib.rs  mod.rs  module.rs  name.rs  signature.rs  ty.rs  users.rs  value.rs
src/machine/: Cargo.toml  generate.rs  instruction.rs  lib.rs  operand.rs  pattern.rs  register.rs
src/machine/avr/: legalize.rs  mod.rs  registers.rs  select.rs  target.rs
src/machine/avr/instruction/: add.rs  ldi.rs  mod.rs  mov.rs  rd.rs  rdi.rs  rdrr.rs  returns.rs  simple.rs
src/mc/: encodable.rs  operand.rs
src/mc/formats/: binarykind.rs  mod.rs
src/mir/: Cargo.toml  branch.rs  build.rs  dag.rs  expand.rs  function.rs  lib.rs  node.rs  opcodes.rs  ty.rs  utils.rs  value.rs  verifier.rs
src/pass/: Cargo.toml  lib.rs  manager.rs  mod.rs  registrar.rs
src/pass/transforms/: constant_folding.rs  dce.rs  inliner.rs  mod.rs  strength_reduction.rs
src/pm/: manager.rs  mod.rs
src/regalloc/: Cargo.toml  allocate.rs  instruction.rs  lib.rs  program.rs  register.rs  target.rs
src/regalloc/algorithm/: idiotic.rs  mod.rs
src/regalloc/live_interval/: live_interval.rs  mod.rs
src/regalloc/live_variable/: build.rs  live_interval.rs  live_range.rs  mod.rs
src/select/: Cargo.toml  action.rs  adjustment.rs  constraint.rs  context.rs  legalize.rs  lib.rs  operation.rs  pattern.rs  selector.rs
src/select/legalize/: action.rs  default.rs  mod.rs  operation.rs
src/select2/: Cargo.toml  adjustment.rs  context.rs  lib.rs  permutation.rs  selector.rs
src/test/: Cargo.toml  instance.rs  lib.rs  print.rs  test.rs
src/util/: Cargo.toml  architecture.rs  debug.rs  enums.rs  id.rs  lib.rs  list.rs  mod.rs  os.rs  set.rs
test/: example.ir
test/parser/function/: barebones-multi-line.ir  barebones-one-liner.ir  simple-idiomatic.ir  (+2 more)
tests/: lib.rs
tests/isel/: add.ir  basic.ir  ret.ir
tools/: asm.rs  basic-example.rs  opt.rs  test.rs
(+55 files in other folders)
