[package]

name = "compiler"
version = "0.0.1"
authors = ["Dylan McKay <dylanmckay34@gmail.com"]

[dependencies]
num = "*"
bit-vec = "*"
clippy = "*"
argparse = "*"
walkdir = "0.1"
term = "*"

[dependencies.compiler_util]
path = "src/util"
[dependencies.compiler_lang]
path = "src/lang"
[dependencies.compiler_target]
path = "src/target"
[dependencies.compiler_ir]
path = "src/ir"
[dependencies.compiler_isel]
path = "src/isel"
[dependencies.compiler_pass]
path = "src/pass"
[dependencies.compiler_test]
path = "src/test"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "asm"
path = "tools/asm.rs"

[[bin]]
name = "test"
path = "tools/test.rs"

[[bin]]
name = "basic-example"
path = "tools/basic-example.rs"
