[package]

name = "compiler"
version = "0.0.1"
authors = ["Dylan McKay <dylanmckay34@gmail.com"]

[dependencies]
num = "0.1.32"
bit-vec = "0.4.3"
clippy = "0.0.69"
argparse = "0.2.1"
walkdir = "0.1.5"
term = "0.4.4"

[dependencies.compiler_util]
path = "src/util"
[dependencies.compiler_lang]
path = "src/lang"
[dependencies.compiler_target]
path = "src/target"
[dependencies.compiler_ir]
path = "src/ir"
[dependencies.compiler_mir]
path = "src/mir"
[dependencies.compiler_pass]
path = "src/pass"
[dependencies.compiler_test]
path = "src/test"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "asm"
path = "tools/asm.rs"

[[bin]]
name = "test"
path = "tools/test.rs"

[[bin]]
name = "basic-example"
path = "tools/basic-example.rs"
